<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_15sdp"
    android:layout_marginEnd="@dimen/_15sdp"
    android:background="@drawable/rounded_white_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/gallary"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_14sdp" />

        <View
            android:id="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/light_gray" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/app_color"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            android:textSize="@dimen/_14sdp" />

    <View
        android:id="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/tvCamera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/light_gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        android:textColor="@color/app_color"
        android:textSize="@dimen/_14sdp" />


</androidx.constraintlayout.widget.ConstraintLayout>


